--- a/config/proxysql.cnf
+++ b/config/proxysql.cnf
@@ -1,9 +1,13 @@
+datadir="/var/lib/proxysql"
+errorlog="/var/lib/proxysql/proxysql.log"
 admin_variables=
 {
-    admin_credentials="admin:admin"
+    admin_credentials="admin:admin;radmin:radmin"
     mysql_ifaces="0.0.0.0:6032"
+    admin-web_enabled=true
     refresh_interval=2000
     unix_socket="/tmp/proxysql.sock"
+    debug=true
 }
 
 mysql_variables=
@@ -18,25 +22,41 @@ mysql_variables=
     monitor_username="monitor"
     monitor_password="monitor"
     monitor_history=600000
+    connect_retries_on_failure=10
+    multiplexing=true
 }
+
+mysql_galera_hostgroups = (
+  {
+    writer_hostgroup=10
+    backup_writer_hostgroup=11
+    reader_hostgroup=20
+    offline_hostgroup=99
+    active=1
+    max_writers=1
+    writer_is_also_reader=1
+    max_transactions_behind=50
+  }
+)
 
 mysql_servers =
 (
-    { address="172.20.1.11", port=3306, hostgroup=10, max_connections=100 },
-    { address="172.20.1.12", port=3306, hostgroup=11, max_connections=100 },
-    { address="172.20.1.13", port=3306, hostgroup=11, max_connections=100 },
-    { address="172.20.1.11", port=3306, hostgroup=20, max_connections=100 },
-    { address="172.20.1.12", port=3306, hostgroup=20, max_connections=100 },
-    { address="172.20.1.13", port=3306, hostgroup=20, max_connections=100 }
+    { address="172.20.1.11", port=3306, hostgroup=10, max_connections=100, weight=101 },
+    { address="172.20.1.12", port=3306, hostgroup=10, max_connections=100, weight=100 },
+    { address="172.20.1.13", port=3306, hostgroup=10, max_connections=100, weight=100 },
+    { address="172.20.1.11", port=3306, hostgroup=20, max_connections=100, weight=100 },
+    { address="172.20.1.12", port=3306, hostgroup=20, max_connections=100, weight=100 },
+    { address="172.20.1.13", port=3306, hostgroup=20, max_connections=100, weight=100 }
 )
 
 mysql_users =
 (
-    { username = "root", password = "root", default_hostgroup = 10, active = 1 }
+    { username="root", password="root", default_hostgroup=10, active=1 },
+    { username="monitor", password="monitor", default_hostgroup=20, active=1 }
 )
 
 mysql_query_rules =
 (
-    { rule_id=10, username="root", match_pattern="^SELECT", destination_hostgroup=20, active=1 },
-    { rule_id=20, username="root", match_pattern=".*", destination_hostgroup=10, active=1 }
+    { rule_id=10, username="monitor", destination_hostgroup=20, active=1 },
+    { rule_id=20, username="root", destination_hostgroup=10, active=1 }
 )
